// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent list item renders connected correctly 1`] = `
<div>
  <li
    className="sc-fznyAO czxrNm"
  >
    <span
      className="sc-AxjAm sc-fznKkj eKuYEa"
    >
      agentName
    </span>
    <div
      className="sc-fznZeY gwCZdU"
    >
      <div
        className="sc-AxirZ hLbodF"
      >
        <div
          className="sc-AxiKw cDPPUu"
        />
        <span
          className="sc-AxjAm sc-AxhCb fnilXu"
        >
          Connected
        </span>
      </div>
      <i
        className="sc-fzokOt sc-fzqBZW gjFXho fas fa-terminal"
        onClick={[Function]}
      />
    </div>
  </li>
</div>
`;

exports[`agent list item renders disconnected correctly 1`] = `
<div>
  <li
    className="sc-fznyAO czxrNm"
  >
    <span
      className="sc-AxjAm sc-fznKkj eKuYEa"
    >
      agentName
    </span>
    <div
      className="sc-fznZeY gwCZdU"
    >
      <div
        className="sc-AxirZ hLbodF"
      >
        <div
          className="sc-AxiKw gYdmwA"
        />
        <span
          className="sc-AxjAm sc-AxhCb bSClzs"
        >
          Disconnected
        </span>
      </div>
      <i
        className="sc-fzokOt sc-fzqBZW hmiIRt fas fa-terminal"
        onClick={[Function]}
      />
    </div>
  </li>
</div>
`;
